--- a/_dev/src/template/main.pug
+++ b/_dev/src/template/main.pug
@@ -1,12 +1,12 @@
 doctype html
 html(lang="ru-RU")
+	block vars
+
 	head
 		include section/_head
-	body
+	body(class=body_class)
 
 		include common/mixins
-
-		block vars
 
 		include section/header
 		
