--- a/_dev/src/template/page/booking.pug
+++ b/_dev/src/template/page/booking.pug
@@ -24,9 +24,9 @@ block content
 					.title__text Бронирование
 
 			.booking__text
-				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum illo tempora, eius sunt fugiat similique iure dignissimos adipisci dicta doloremque!
-				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum illo tempora, eius sunt fugiat similique iure dignissimos adipisci dicta doloremque!
-				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum illo tempora, eius sunt fugiat similique iure dignissimos adipisci dicta doloremque!
+				p Желательно указывать телефон в международном формате.
+				p Внимательно указывайте почту. На многие письма нет возможности ответить из-за неправильного указания e-mail.
+				p <strong>Внимание!</strong> В связи с большой загрузкой администраторов обработка почты может занимать до двух суток.
 
 			form.form#bookig-form(action="")
 				label.form__label
