--- a/_dev/src/template/page/index.pug
+++ b/_dev/src/template/page/index.pug
@@ -9,7 +9,7 @@ block content
 				.slide-text
 					.slide-text__big Отдых на Черном море
 					.slide-text__normal в спокойной обстановке, тишине и полном комфорте
-					a.button.button_orange.slide__button(href="#") забронировать
+					a.button.button_orange.slide__button(href="booking.html") забронировать
 
 	// ====== apartments ======= 
 	.apartments.apartments_main
