--- a/_dev/src/template/page/numer.pug
+++ b/_dev/src/template/page/numer.pug
@@ -29,15 +29,18 @@ block content
 
 			._row
 				.apartment__img-holder
-					img.apartment__img(src="/img/photos/photo_1.jpg", alt="")
+					img.apartment__img(src="/img/apartments/photo_6.jpg", alt="")
+					img.apartment__img-decor(src="img/cocktail.png", alt="cocktail")
 
 				.apartment__info
-					.apartment__info-title Lorem ipsum dolor sit amet, consectetur.
-					p Lorem ipsum dolor.
-					p Lorem ipsum dolor.
-					p Lorem ipsum dolor.
-					p Lorem ipsum dolor.
-					p Lorem ipsum dolor.
+					.apartment__info-title Трехкомнатный коттедж с верандой для большой семьи
+					p <strong>Площадь:</strong> 80 м2
+					p <strong>Количество:</strong> 4 коттеджа
+					p <strong>Размещение:</strong> одноэтажные деревянные коттеджи с просторными верандами расположены на территории базы отдыха в парковой, зелёной зоне. Из небольшого холла вы можете перейти в спальню с индивидуальным входом, либо в гостиную комнату. Гостиная является проходной комнатой для второй спальни. Также в коттедже есть душевая и туалетная комнаты.
+					p <strong>В номерах:</strong> мебель (обеденный стол, стулья, шкаф)  и необходимая техника (холодильник, телевизор, кондиционер).
+					p Данный тип номера позволяет разместить 5-7 человек.
+					p <strong>Идеальный вариант для большой семьи за приемлемую цену.</strong>
+					p <em>Курение, размещение с животными и приготовление пищи в номере категорически запрещено.</em>
 
 					table
 						thead
@@ -60,24 +63,38 @@ block content
 			
 			.owl-carousel.apartment-carousel
 				.apartment-carousel-item
-					img.apartment-carousel-img(src="/img/photos/photo_1.jpg", alt="")
+					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
 				.apartment-carousel-item
-					img.apartment-carousel-img(src="/img/photos/photo_1.jpg", alt="")
+					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
 				.apartment-carousel-item
-					img.apartment-carousel-img(src="/img/photos/photo_1.jpg", alt="")
+					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
 				.apartment-carousel-item
-					img.apartment-carousel-img(src="/img/photos/photo_1.jpg", alt="")
+					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
 				.apartment-carousel-item
-					img.apartment-carousel-img(src="/img/photos/photo_1.jpg", alt="")
+					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
+				.apartment-carousel-item
+					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
+				.apartment-carousel-item
+					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
+				.apartment-carousel-item
+					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
+				.apartment-carousel-item
+					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
+				.apartment-carousel-item
+					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
 
 			.apartment-text
-				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur vitae quaerat, officiis ex magnam accusamus similique cum saepe facilis eum.
-				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur vitae quaerat, officiis ex magnam accusamus similique cum saepe facilis eum.
-				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur vitae quaerat, officiis ex magnam accusamus similique cum saepe facilis eum.
-				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur vitae quaerat, officiis ex magnam accusamus similique cum saepe facilis eum.
-				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur vitae quaerat, officiis ex magnam accusamus similique cum saepe facilis eum.
-				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur vitae quaerat, officiis ex magnam accusamus similique cum saepe facilis eum.
-				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur vitae quaerat, officiis ex magnam accusamus similique cum saepe facilis eum.
+				p Мы разработали несколько вариантов комфортного размещения, и вы можете выбрать наиболее удачный для вас.
+				p Эконом: для всех, кто планирует недорогой отдых на Черном море, в Затоке. 2-3-местные номера с удобными кроватями в 1-этажных домиках — отличный вариант для молодежного отдыха.
+				p Эконом плюс: Уютные деревянные двухэтажные домики, в которых в можете выбрать 2-местный номер, подойдут и для людей старшего поколения, и для молодоженов, и для семей с детьми. Санузел и душ с горячей водой — в холле, рассчитанном на 3 номера.
+				p Стандарт: 2-3-местные номера в новом 3-этажном каменном корпусе. Санузел и душ на этаже. Недорогой вариант расселения при хорошем уровне комфорта.
+				p Стандарт Premium: наличие номеров, состоящих как из одной, так и из двух комнат. Удобное размещение семьей или компанией. Санузел и душ в номере. Отдых в Затоке с детьми будет удачным, если вы выберете этот тип расселения.
+				p Закарпатский дом: номера в деревянных коттеджах, выполненных из сруба. Даже в жару в этом доме будет комфортно, а цены на проживание очень умеренные.
+				p Семейный коттедж: идеальный вариант как для молодоженов, так и для компании 5-7 человек, решивших провести отпуск вместе.
+				p Дети до 5 лет при двух родителях размещаются без предоставления отдельного места — за 20 грн/сут;
+				p При поступлении 2-их детей до 5 лет, оплачивается 1 спальное место;
+				p Дети до 10 лет при одном родителе — 5% от стоимости одного места.
+				p Дети до 10 лет при  двух родителях размещаются на дополнительном месте со скидкой 20% с одного места.
 
 			.apartment-others
 				.apartment-others__title Другие категории номеров
