--- a/_dev/src/template/page/numers.pug
+++ b/_dev/src/template/page/numers.pug
@@ -60,13 +60,13 @@ block content
 			._row
 				.apartments-col
 					h5 Номера
-					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error unde, dicta labore omnis amet impedit veniam temporibus tempore architecto perspiciatis.
-					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error unde, dicta labore omnis amet impedit veniam temporibus tempore architecto perspiciatis.
-					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error unde, dicta labore omnis amet impedit veniam temporibus tempore architecto perspiciatis.
-					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error unde, dicta labore omnis amet impedit veniam temporibus tempore architecto perspiciatis.
-					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error unde, dicta labore omnis amet impedit veniam temporibus tempore architecto perspiciatis.
-					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error unde, dicta labore omnis amet impedit veniam temporibus tempore architecto perspiciatis.
-					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error unde, dicta labore omnis amet impedit veniam temporibus tempore architecto perspiciatis.
+					p Мы разработали несколько вариантов комфортного размещения, и вы можете выбрать наиболее удачный для вас.
+					p Эконом: для всех, кто планирует недорогой отдых на Черном море, в Затоке. 2-3-местные номера с удобными кроватями в 1-этажных домиках — отличный вариант для молодежного отдыха.
+					p Эконом плюс: Уютные деревянные двухэтажные домики, в которых в можете выбрать 2-местный номер, подойдут и для людей старшего поколения, и для молодоженов, и для семей с детьми. Санузел и душ с горячей водой — в холле, рассчитанном на 3 номера.
+					p Стандарт: 2-3-местные номера в новом 3-этажном каменном корпусе. Санузел и душ на этаже. Недорогой вариант расселения при хорошем уровне комфорта.
+					p Стандарт Premium: наличие номеров, состоящих как из одной, так и из двух комнат. Удобное размещение семьей или компанией. Санузел и душ в номере. Отдых в Затоке с детьми будет удачным, если вы выберете этот тип расселения.
+					p Закарпатский дом: номера в деревянных коттеджах, выполненных из сруба. Даже в жару в этом доме будет комфортно, а цены на проживание очень умеренные.
+
 
 				.apartments-col
 					table.apartments-table
