--- a/_dev/src/template/page/service.pug
+++ b/_dev/src/template/page/service.pug
@@ -3,6 +3,7 @@ extends ../main
 block vars
 	- 
 		var show_button = true,
+				body_class = 'body_service',
 				breadcrumbs = [
 				{
 					url: "/",
