--- a/_dev/src/style/common/general.scss
+++ b/_dev/src/style/common/general.scss
@@ -42,10 +42,23 @@ body {
   color: $body-font-color;
   background: $body-color url(../img/bg_body.png) 0 50% no-repeat;
   // background-size: cover;
-  background-position: top center;
+  background-position: 68% 0;
   word-wrap: break-word;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.body_service {
+  background-image: url(../img/bg_service.jpg);
+}
+
+.body_contacts {
+  background-image: url(../img/bg_contacts.jpg);
+
+  footer.footer {
+    background: none;
+    padding-bottom: 0;
+  }
 }
 
 a, a:hover, a:focus {
@@ -84,7 +97,6 @@ h1[class], h2[class], h3[class], h4[class], h5[class], h6[class], p[class] {
 
 main.main {
   flex: 1 0 auto;
-  padding: 0 15px;
 }
 
 /*! --- standart buttons --- */
@@ -124,6 +136,15 @@ main.main {
       background: -webkit-linear-gradient(#14caff, #49e3ff);
       background: -o-linear-gradient(#14caff, #49e3ff);
       background: linear-gradient(#14caff, #49e3ff);
+    }
+  }
+
+  &_show-phones {
+    display: none;
+    padding: 10px 15px;
+
+    @include media(992) {
+      display: block;
     }
   }
 
@@ -223,6 +244,10 @@ main.main {
 /*! --- breadcrumbs --- */
 .breadcrumbs {
   padding: 0 15px;
+
+  @include media(992) {
+    margin-top: 35px;
+  }
 
   &__list[class] {
     margin: 0;
