--- a/_dev/src/style/page/apartment.scss
+++ b/_dev/src/style/page/apartment.scss
@@ -1,15 +1,29 @@
 /*! ===== apartment ===== */
 .apartment {
+	font-size: 14px;
 
 	&__img {
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
+		border-bottom-right-radius: 50%;
 
 		&-holder {
+			position: relative;
 			float: left;
 			width: 50%;
+			height: 490px;
 		}
+
+		&-decor {
+			position: absolute;
+			bottom: 0;
+			right: 0;
+		}
+	}
+
+	&-text {
+		padding-top: 50px;
 	}
 
 	&__info {
@@ -27,6 +41,7 @@
 		}
 
 		table {
+			width: 100%;
 			margin-top: 35px;
 			border-collapse: collapse;
 		}
@@ -36,13 +51,23 @@
 			font-size: 12px;
 			font-weight: bold;
 			text-align: center;
-			border: 2px solid #49e3ff;
+			border: 2px solid #d6f4fe;
+			background-color: #fff;
+
+			a {
+				color: #4cbec7;
+			}
 		}
 
 		thead td {
-			background-color: #49e3ff;
+			background-color: #d6f4fe;
 			border: 2px solid #fff;
 		}
+	}
+
+	&-carousel {
+		max-width: 90%;
+		width: 100%;
 	}
 
 	&-others {
@@ -60,8 +85,8 @@
 		}
 
 		.apartments-link {
-			width: 100%;
-			height: 220px;
+			width: 230px;
+			height: 230px;
 		}
 
 		.apartments-item__text {
