--- a/_dev/src/style/section/footer.scss
+++ b/_dev/src/style/section/footer.scss
@@ -3,6 +3,10 @@
 footer.footer {
 	background: transparent url(../img/bg_footer.png) bottom center no-repeat;
 	padding-bottom: 100px;
+
+	@include media(992) {
+		padding-bottom: 20px;
+	}
 }
 
 .footer-socials {
@@ -44,16 +48,28 @@ footer.footer {
 	justify-content: space-between;
 	flex-direction: row;
 	align-items: center;
+
+	@include media(992) {
+		flex-direction: column;
+	}
 }
 
 .copyright {
 	margin-top: 20px;
+
+	@include media(992) {
+		margin-top: 0;
+	}
 }
 
 .footer-menu {
 	flex: 1 0 auto;
 	margin-top: 20px;
 	text-align: center;
+
+	@include media(992) {
+		margin-top: 0;
+	}
 
 	&-item {
 		display: inline-block;
@@ -77,6 +93,10 @@ footer.footer {
 
 .skylogic {
 	margin-top: 20px;
+
+	@include media(992) {
+		margin-top: 0;
+	}
 	
 	&__link {
 		color: $body-font-color;
