--- a/_dev/src/template/page/booking.pug
+++ b/_dev/src/template/page/booking.pug
@@ -46,7 +46,7 @@ block content
 					select.form__input.form__input_select(name="numer" data-rules="required|number" data-fieldname="Категория номера")
 						option(value="") Выберите категорию номера
 						option(value="1") Стандарт премиум
-						option(value="2") Закарпатский дом^(\d){1,2}\/(\d){1,2}\/(\d){1,2}$
+						option(value="2") Закарпатский дом
 						option(value="3") Стандарт
 						option(value="4") Эконом
 						option(value="5") Эконом +
