--- a/_dev/src/template/page/numer.pug
+++ b/_dev/src/template/page/numer.pug
@@ -62,26 +62,28 @@ block content
 								td 200 грн
 			
 			.owl-carousel.apartment-carousel
-				.apartment-carousel-item
+				a.apartment-carousel-item(href="img/apartments/photo_1.jpg", data-fancybox-group="gallery", title="Lorem ipsum dolor sit amet, consectetur adipiscing elit")
 					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
-				.apartment-carousel-item
-					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
-				.apartment-carousel-item
-					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
-				.apartment-carousel-item
-					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
-				.apartment-carousel-item
-					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
-				.apartment-carousel-item
-					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
-				.apartment-carousel-item
-					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
-				.apartment-carousel-item
-					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
-				.apartment-carousel-item
-					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
-				.apartment-carousel-item
-					img.apartment-carousel-img(src="/img/apartments/photo_1.jpg", alt="")
+				a.apartment-carousel-item(href="img/apartments/photo_2.jpg", data-fancybox-group="gallery", title="Lorem ipsum dolor sit amet, consectetur adipiscing elit")
+					img.apartment-carousel-img(src="/img/apartments/photo_2.jpg", alt="")
+				a.apartment-carousel-item(href="img/apartments/photo_3.jpg", data-fancybox-group="gallery", title="Lorem ipsum dolor sit amet, consectetur adipiscing elit")
+					img.apartment-carousel-img(src="/img/apartments/photo_3.jpg", alt="")
+				a.apartment-carousel-item(href="img/apartments/photo_4.jpg", data-fancybox-group="gallery", title="Lorem ipsum dolor sit amet, consectetur adipiscing elit")
+					img.apartment-carousel-img(src="/img/apartments/photo_4.jpg", alt="")
+				a.apartment-carousel-item(href="img/apartments/photo_5.jpg", data-fancybox-group="gallery", title="Lorem ipsum dolor sit amet, consectetur adipiscing elit")
+					img.apartment-carousel-img(src="/img/apartments/photo_5.jpg", alt="")
+				a.apartment-carousel-item(href="img/apartments/photo_6.jpg", data-fancybox-group="gallery", title="Lorem ipsum dolor sit amet, consectetur adipiscing elit")
+					img.apartment-carousel-img(src="/img/apartments/photo_6.jpg", alt="")
+
+				a.apartment-carousel-item(href="img/apartments/photo_3.jpg", data-fancybox-group="gallery", title="Lorem ipsum dolor sit amet, consectetur adipiscing elit")
+					img.apartment-carousel-img(src="/img/apartments/photo_3.jpg", alt="")
+				a.apartment-carousel-item(href="img/apartments/photo_4.jpg", data-fancybox-group="gallery", title="Lorem ipsum dolor sit amet, consectetur adipiscing elit")
+					img.apartment-carousel-img(src="/img/apartments/photo_4.jpg", alt="")
+				a.apartment-carousel-item(href="img/apartments/photo_5.jpg", data-fancybox-group="gallery", title="Lorem ipsum dolor sit amet, consectetur adipiscing elit")
+					img.apartment-carousel-img(src="/img/apartments/photo_5.jpg", alt="")
+				a.apartment-carousel-item(href="img/apartments/photo_6.jpg", data-fancybox-group="gallery", title="Lorem ipsum dolor sit amet, consectetur adipiscing elit")
+					img.apartment-carousel-img(src="/img/apartments/photo_6.jpg", alt="")
+
 
 			.apartment-text
 				p Мы разработали несколько вариантов комфортного размещения, и вы можете выбрать наиболее удачный для вас.
