--- a/_dev/src/style/page/apartment.scss
+++ b/_dev/src/style/page/apartment.scss
@@ -1,5 +1,6 @@
 /*! ===== apartment ===== */
 .apartment {
+	padding: 0 15px;
 	font-size: 14px;
 
 	&__img {
@@ -8,17 +9,34 @@
 		object-fit: cover;
 		border-bottom-right-radius: 50%;
 
+		@include media(640) {
+			border-bottom-right-radius: unset;
+    }
+
 		&-holder {
 			position: relative;
 			float: left;
 			width: 50%;
 			height: 490px;
+
+      @include media(768) {
+ 				width: 90%;
+ 				float: none;
+ 				margin: auto;
+      }
+      @include media(640) {
+				height: 350px;
+      }
 		}
 
 		&-decor {
 			position: absolute;
 			bottom: 0;
 			right: 0;
+
+			@include media(640) {
+				display: none;
+      }
 		}
 	}
 
@@ -30,6 +48,13 @@
 		float: right;
 		width: 50%;
 		padding-left: 30px;
+
+    @include media(768) {
+			width: 100%;
+			float: none;
+			margin-top: 25px;
+			padding-left: 0;
+		}
 
 		&-title {
 			text-transform: uppercase;
@@ -68,6 +93,21 @@
 	&-carousel {
 		max-width: 90%;
 		width: 100%;
+
+		&-item {
+			display: inline-block;
+			height: 120px;
+
+			@include media(768) {
+				height: 250px;
+			}
+		}
+
+		&-img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
 	}
 
 	&-others {
@@ -78,10 +118,26 @@
 			text-transform: uppercase;
 		}
 
+		&-list {
+			text-align: center;
+		}
+
 		&-item {
 			float: left;
 			width: 20%;
 			padding: 10px;
+
+      @include media(1200) {
+      	float: none;
+      	display: inline-block;
+        width: 33%;
+      }
+      @include media(768) {
+        width: 49%;
+      }
+      @include media(604) {
+        width: 100%;
+      }
 		}
 
 		.apartments-link {
