--- a/_dev/src/style/page/news.scss
+++ b/_dev/src/style/page/news.scss
@@ -10,6 +10,11 @@
 		width: 50%;
 		padding: 15px;
 
+		@include media(640) {
+			float: none;
+			width: 100%;
+		}
+
 		&:nth-of-type(2n+1) {
 			clear: both;
 		}
@@ -39,6 +44,17 @@
 				margin-left: 15px;
 				color: $body-font-color;
 				text-decoration: underline;
+			}
+		}
+	}
+
+	&-in__text {
+		padding: 0 15px;
+
+		img {
+			@include media(640) {
+				float: none !important;
+				width: 100%;
 			}
 		}
 	}
