--- a/_dev/src/style/page/photos.scss
+++ b/_dev/src/style/page/photos.scss
@@ -9,6 +9,17 @@
 		float: left;
 		width: 25%;
 		padding: 15px;
+
+		@include media(992) {
+			width: 33.33%;
+		}
+		@include media(768) {
+			width: 50%;
+		}
+		@include media(480) {
+			float: none;
+			width: 100%;
+		}
 	}
 
 	&-link {
