--- a/_dev/src/style/section/header.scss
+++ b/_dev/src/style/section/header.scss
@@ -47,7 +47,7 @@ header.header {
 	text-align: right;
 
   @include media(992) {
-  	padding-right: 75px;
+  	padding-right: 100px;
   }
 }
 
@@ -221,6 +221,7 @@ header.header {
 
 		&_parent {
 			position: relative;
+			cursor: pointer;
 
 			&:after {
 				display: none;
@@ -323,7 +324,7 @@ header.header {
 	display: none;
 	position: absolute;
 	left: -80px;
-	top: 25px;
+	top: 10px;
 	width: 25px;
 	height: 20px;
 	cursor: pointer;
@@ -374,7 +375,8 @@ header.header {
 	margin-top: 35px;
 	text-align: right;
 
-	@include media(992) {
+	@include media(480) {
+		text-align: center;
 		// text-align: left;
 		// padding-left: 20%;
 	}
